<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.esaulov.timerwatch.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="183dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="183dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="183dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="183dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="231dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="231dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multipy"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="327dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="327dp" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_c"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="327dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="327dp" />
</android.support.constraint.ConstraintLayout>

